rust_ggml/ffi_ggml/src/ggml_bindings.rs

extern "C" {
    pub fn ggml_graph_dump_dot(
        gb: *const ggml_cgraph,
        gf: *const ggml_cgraph,
        filename: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn ggml_build_backward_gradient_checkpointing(
        ctx: *mut ggml_context,
        gf: *mut ggml_cgraph,
        gb: *mut ggml_cgraph,
        gb_tmp: *mut ggml_cgraph,
        checkpoints: *mut *mut ggml_tensor,
        n_checkpoints: ::std::os::raw::c_int,
    );
}
pub const ggml_opt_type_GGML_OPT_TYPE_ADAM: ggml_opt_type = 0;
pub const ggml_opt_type_GGML_OPT_TYPE_LBFGS: ggml_opt_type = 1;
pub type ggml_opt_type = u32;
pub const ggml_linesearch_GGML_LINESEARCH_DEFAULT: ggml_linesearch = 1;
pub const ggml_linesearch_GGML_LINESEARCH_BACKTRACKING_ARMIJO: ggml_linesearch = 0;
pub const ggml_linesearch_GGML_LINESEARCH_BACKTRACKING_WOLFE: ggml_linesearch = 1;
pub const ggml_linesearch_GGML_LINESEARCH_BACKTRACKING_STRONG_WOLFE: ggml_linesearch = 2;
pub type ggml_linesearch = u32;
pub const ggml_opt_result_GGML_OPT_RESULT_OK: ggml_opt_result = 0;
pub const ggml_opt_result_GGML_OPT_RESULT_DID_NOT_CONVERGE: ggml_opt_result = 1;
pub const ggml_opt_result_GGML_OPT_RESULT_NO_CONTEXT: ggml_opt_result = 2;
pub const ggml_opt_result_GGML_OPT_RESULT_INVALID_WOLFE: ggml_opt_result = 3;
pub const ggml_opt_result_GGML_OPT_RESULT_FAIL: ggml_opt_result = 4;
pub const ggml_opt_result_GGML_OPT_RESULT_CANCEL: ggml_opt_result = 5;
pub const ggml_opt_result_GGML_LINESEARCH_FAIL: ggml_opt_result = -128;
pub const ggml_opt_result_GGML_LINESEARCH_MINIMUM_STEP: ggml_opt_result = -127;
pub const ggml_opt_result_GGML_LINESEARCH_MAXIMUM_STEP: ggml_opt_result = -126;
pub const ggml_opt_result_GGML_LINESEARCH_MAXIMUM_ITERATIONS: ggml_opt_result = -125;
pub const ggml_opt_result_GGML_LINESEARCH_INVALID_PARAMETERS: ggml_opt_result = -124;
pub type ggml_opt_result = i32;
pub type ggml_opt_callback = ::std::option::Option<
    unsafe extern "C" fn(
        data: *mut ::std::os::raw::c_void,
        accum_step: ::std::os::raw::c_int,
        sched: *mut f32,
        cancel: *mut bool,
    ),
>;
pub type ggml_log_callback = ::std::option::Option<
    unsafe extern "C" fn(
        level: ggml_log_level,
        text: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    pub fn ggml_log_set(log_callback: ggml_log_callback, user_data: *mut ::std::os::raw::c_void);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_opt_params {
    pub type_: ggml_opt_type,
    pub graph_size: size_t,
    pub n_threads: ::std::os::raw::c_int,
    pub past: ::std::os::raw::c_int,
    pub delta: f32,
    pub max_no_improvement: ::std::os::raw::c_int,
    pub print_forward_graph: bool,
    pub print_backward_graph: bool,
    pub n_gradient_accumulation: ::std::os::raw::c_int,
    pub adam: ggml_opt_params_adam_params,
    pub lbfgs: ggml_opt_params_lbfgs_params,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_opt_params_adam_params {
    pub n_iter: ::std::os::raw::c_int,
    pub sched: f32,
    pub decay: f32,
    pub decay_min_ndim: ::std::os::raw::c_int,
    pub alpha: f32,
    pub beta1: f32,
    pub beta2: f32,
    pub eps: f32,
    pub eps_f: f32,
    pub eps_g: f32,
    pub gclip: f32,
}
#[test]
fn bindgen_test_layout_ggml_opt_params_adam_params() {
    assert_eq!(
        ::std::mem::size_of::<ggml_opt_params_adam_params>(),
        44usize,
        concat!("Size of: ", stringify!(ggml_opt_params_adam_params))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_opt_params_adam_params>(),
        4usize,
        concat!("Alignment of ", stringify!(ggml_opt_params_adam_params))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).n_iter as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(n_iter)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).sched as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(sched)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).decay as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(decay)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).decay_min_ndim as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(decay_min_ndim)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).alpha as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(alpha)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).beta1 as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(beta1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).beta2 as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(beta2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).eps as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(eps)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).eps_f as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(eps_f)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).eps_g as *const _ as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(eps_g)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_adam_params>())).gclip as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_adam_params),
            "::",
            stringify!(gclip)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_opt_params_lbfgs_params {
    pub m: ::std::os::raw::c_int,
    pub n_iter: ::std::os::raw::c_int,
    pub max_linesearch: ::std::os::raw::c_int,
    pub eps: f32,
    pub ftol: f32,
    pub wolfe: f32,
    pub min_step: f32,
    pub max_step: f32,
    pub linesearch: ggml_linesearch,
}
#[test]
fn bindgen_test_layout_ggml_opt_params_lbfgs_params() {
    assert_eq!(
        ::std::mem::size_of::<ggml_opt_params_lbfgs_params>(),
        36usize,
        concat!("Size of: ", stringify!(ggml_opt_params_lbfgs_params))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_opt_params_lbfgs_params>(),
        4usize,
        concat!("Alignment of ", stringify!(ggml_opt_params_lbfgs_params))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).m as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(m)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).n_iter as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(n_iter)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).max_linesearch as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(max_linesearch)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).eps as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(eps)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).ftol as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(ftol)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).wolfe as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(wolfe)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).min_step as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(min_step)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).max_step as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(max_step)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_lbfgs_params>())).linesearch as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_lbfgs_params),
            "::",
            stringify!(linesearch)
        )
    );
}
